Adjusted text scale issue on firefox

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -11,7 +11,7 @@ video {
 .video-text {
     margin: auto;
     font-family: 'DM Sans', sans-serif; 
-    position: relative;
+    
 }
 
 .text-center {
